# ToolBox

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
docs/: immobilier.md  quotidien.md  roadmap.md  utilitaire.md
docs/utilitaire/: README.md  filtres.md
scripts/: deploy_streamlit.sh  export_reports.py  lbc_login.py  update_daily.sh
src/kevin_toolbox/: __init__.py  config.py  main.py
src/kevin_toolbox/core/: filters.py  logging_setup.py  paths.py
src/kevin_toolbox/finance/: __init__.py  budget.py  cashflow.py  estimations.py
src/kevin_toolbox/immobilier/: __init__.py  geocoding.py  reports.py  scoring.py  scraping.py
src/kevin_toolbox/quotidien/: __init__.py  heures.py  meteo.py  reminders.py
src/kevin_toolbox/vehicule/: __init__.py  amenagement.py  carburant.py  entretien.py  geocoding.py  lbc_scraping.py  scoring.py  scraping.py  storage.py
tests/: test_finance.py  test_immobilier.py  test_quotidien.py  test_vehicule.py
